[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "abscab"
version = "1.0.0"
authors = [
    {name = "Jonathan Schilling", email = "jonathan.schilling@mail.de"},
]
description = "Accurate Biot-Savart routines with Correct Asymptotic Behaviour"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"


